--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       left: 100px !important;
     }
   </style>
-  <title>Windows XP: So many good memories...</title>
+  <title>Windows XP</title>
 </head>
 <body>
   <a class="dont" href="#">Don't click</a>
